//package wanyou.game.protocol;
//Ã¿ÈÕ´ò¿¨

message BceDailyMark {
}
